fix(pages): more varied meta descriptions

--- a/src/pages/docs/architecture/api/file-upload.mdx
+++ b/src/pages/docs/architecture/api/file-upload.mdx
@@ -1,6 +1,6 @@
 ---
 title: File Upload
-description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
+description: Learn about the necessary cloud infrastructure resources on which the API project application relies on to upload files.
 ---
 
 import { Alert } from '@/components/Alert'
