--- a/src/pages/docs/core-development-concepts/ci-cd/workflows.mdx
+++ b/src/pages/docs/core-development-concepts/ci-cd/workflows.mdx
@@ -1,6 +1,6 @@
 ---
 title: Workflows
-description: Learn how to set up a CI/CD pipeline for your Webiny project.
+description: Get your CI/CD set up in no time with the built-in CI/CD scaffold
 ---
 
 import { Alert } from "@/components/Alert"
