--- a/src/pages/docs/infrastructure/aws/use-aws-profiles.mdx
+++ b/src/pages/docs/infrastructure/aws/use-aws-profiles.mdx
@@ -1,6 +1,6 @@
 ---
 title: Use AWS Profiles
-description: Configure AWS credentials.
+description: How to deploy your Webiny project using different AWS profiles.
 ---
 
 import { Alert } from "@/components/Alert"
