--- a/src/pages/docs/performance-and-load-benchmark/headless-cms/write-benchmark.mdx
+++ b/src/pages/docs/performance-and-load-benchmark/headless-cms/write-benchmark.mdx
@@ -1,6 +1,6 @@
 ---
 title: Write operation benchmark
-description: Webiny Headless CMS performance benchmark.
+description: Webiny Headless CMS performance write benchmark.
 ---
 
 import { Alert } from "@/components/Alert"
