--- a/src/pages/docs/architecture/api/file-download.mdx
+++ b/src/pages/docs/architecture/api/file-download.mdx
@@ -1,6 +1,6 @@
 ---
 title: File Download
-description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
+description: Learn about the necessary cloud infrastructure resources on which the API project application relies on to download files.
 ---
 
 import { Alert } from '@/components/Alert'
