--- a/src/pages/docs/architecture/api/graphql-requests.mdx
+++ b/src/pages/docs/architecture/api/graphql-requests.mdx
@@ -1,6 +1,6 @@
 ---
 title: GraphQL Requests
-description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
+description: Learn about the necessary cloud infrastructure resources on which the API project application relies on to perform graphql requests.
 ---
 
 import { Alert } from '@/components/Alert'
