--- a/src/pages/docs/architecture/api/overview.mdx
+++ b/src/pages/docs/architecture/api/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Overview
-description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
+description: What are the necessary cloud infrastructure resources on which the API project application relies on
 ---
 
 import { Alert } from '@/components/Alert'
