--- a/src/pages/docs/infrastructure/aws/configure-aws-credentials.mdx
+++ b/src/pages/docs/infrastructure/aws/configure-aws-credentials.mdx
@@ -1,6 +1,6 @@
 ---
 title: Configure AWS Credentials
-description: Configure AWS credentials.
+description: How to configure your AWS credentials for programmatic access
 ---
 
 import { Alert } from "@/components/Alert"
