fix: elasticsearch articles

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
@@ -40,7 +40,7 @@ There are different options on how to approach this problem. If you use one opti
 
 This will cover cloning the existing Elasticsearch index to another one (with name which contains the locale code).
 
-This will NOT change the Elasticsearch index mappings or settings (apply templates) for the new index.
+This will NOT change the Elasticsearch index mappings or settings for the new index.
 
 We will use the [Clone index API](https://www.elastic.co/guide/en/elasticsearch/reference/current/indices-clone-index.html).
 
@@ -58,7 +58,7 @@ You need to set the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable to 
 This will produce errors on the input side, so make sure your users know not to touch anything, but this is required for clone to work.
 
 #### 4. Figure Out The Name For Your New Elasticsearch Index
-The article [How To Customize Elasticsearch Index Template](/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template) contains the information on how we create the index names.
+The article [How To Customize Elasticsearch Index](/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index) contains the information on how we create the index names.
 
 ##### __Page Builder Index Name Example__
 We will work with the tenant `root`, so the name of existing index is `root-page-builder`.
@@ -101,7 +101,7 @@ We will use the [Create or update alias API](https://www.elastic.co/guide/en/ela
 Make sure you do a backup the index you are changing.
 
 #### 2. Figure Out The Name For Your New Elasticsearch Index
-The article [How To Customize Elasticsearch Index Template](/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template) contains the information on how we create the index names.
+The article [How To Customize Elasticsearch Index](/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index) contains the information on how we create the index names.
 
 ##### __Page Builder Index Name Example__
 We will work with the tenant `root`, so the name of existing index is `root-page-builder`.
