--- a/src/pages/docs/release-notes/5.26.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.26.0/changelog.mdx
@@ -8,6 +8,6 @@ description: See what's new in Webiny version 5.26.0.
 
 ## Features
 
-### Customize Elasticsearch Index Template For Your Deployment ([#2316](https://github.com/webiny/webiny-js/pull/2316))
+### Customize The Elasticsearch Index Settings And Mappings For Your Deployment ([#2316](https://github.com/webiny/webiny-js/pull/2316))
 
-We added plugins to customize your Elasticsearch Index creation out of predefined templates. To find out more, read [How To Customize Elasticsearch Index Template](/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index-template).
+We added plugins to customize your Elasticsearch Index creation out of predefined templates. To find out more, read [How To Customize Elasticsearch Index](/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index).
