docs: fixed the typo in making a text bold

--- a/src/pages/docs/overview/introduction.mdx
+++ b/src/pages/docs/overview/introduction.mdx
@@ -14,7 +14,7 @@ import { Alert } from "@/components/Alert"
 
 Welcome! 👋
 
-***Webiny**** is an open-source content management system designed for enterprises. It's built on top of the serverless infrastructure to enable great scalability and site reliability even in the most demanding periods.
+Webiny is an open-source content management system designed for enterprises. It's built on top of the serverless infrastructure to enable great scalability and site reliability even in the most demanding periods.
 
 Webiny stands out from the crowd with its unique feature set, architecture, and open-source community. In the following few sections, you'll get to know Webiny, what it can do, and how to best use it to its full advantage.
 
