--- a/src/pages/docs/headless-cms/extending/content-models-via-code.mdx
+++ b/src/pages/docs/headless-cms/extending/content-models-via-code.mdx
@@ -236,11 +236,11 @@ export default [
 +      fieldId: "productCategory",
 +      type: "ref",
 +      label: "Category",
-+      renderer: { "name": "ref-input" },
-+      "settings": {
-+        "models": [
++      renderer: { name: "ref-input" },
++      settings: {
++        models: [
 +          {
-+            "modelId": "category"
++            modelId: "category"
 +          }
 +        ]
 +      }
