fix(integrations): add missing fields to docs

--- a/src/pages/docs/headless-cms/integrations/gatsby.mdx
+++ b/src/pages/docs/headless-cms/integrations/gatsby.mdx
@@ -50,6 +50,8 @@ Add the following models and fields: (Skip this step if you already have content
 - A `text` field with the value "name"
 - A `text` field with the value "slug" (optionally add a validator using this regex which will make sure you have valid urls: `^(?!.*--)[a-z0-9\-]+$`)
 - a `files` field with the value "picture"
+- a `text` field with the value "description"
+- a `text` field with the value "twitterHandle"
 
 ### Posts
 
@@ -58,6 +60,7 @@ Add the following models and fields: (Skip this step if you already have content
 - A `files` field with the value "featured image"
 - A `rich text` field with the value "body"
 - A `reference` field with the value "author"
+- A `text` field with the value "description"
 
 Next, add some content by going to Headless CMS > Ungrouped and choosing a content model.
 
