feat: add FM changes

--- a/src/pages/docs/release-notes/5.26.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.26.0/changelog.mdx
@@ -6,7 +6,25 @@ description: See what's new in Webiny version 5.26.0.
 
 # Changes
 
-## Features
+## File Manager
+
+### Fixed Tagging of Files ([#2381](https://github.com/webiny/webiny-js/pull/2381))
+
+In some cases, trying to tag an uploaded file in the File Manager would cause the app to break. This has now been addressed.
+
+![Tagging Uploaded File](https://user-images.githubusercontent.com/5121148/168072290-acaad166-197f-400e-b024-0df0d8b8a7ca.png)
+
+### Changing the File Upload Limits Is Now Propagated Immediately ([#2385](https://github.com/webiny/webiny-js/pull/2385))
+
+Prior to this release, changes to File Manager settings would not take immediate effect. 
+
+More specifically, if a user tried to upload a file and received the "Max file exceeded." error message, even after incrementing the maximum file upload size limit, and then trying to re-upload the file would not work. Only after a complete page reload the user would be able to continue with the upload. 
+
+![File Manager Settings](https://user-images.githubusercontent.com/5121148/167284117-309007cf-989f-4ca4-9395-c144f2aacc0f.png) 
+
+This has now been addressed. Changes to File Manager settings will take immediate effect and doing a page reload is no longer needed. 
+
+## Development
 
 ### Customize The Elasticsearch Index Settings And Mappings For Your Deployment ([#2316](https://github.com/webiny/webiny-js/pull/2316))
 
