feat: add image to changelog

--- a/src/pages/docs/release-notes/5.26.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.26.0/changelog.mdx
@@ -31,6 +31,8 @@ This has now been addressed. Changes to File Manager settings will take immediat
 We added a check in the UI when creating a new model to verify that the model with same name does not exist in the system already.
 The check is still being run on the API side, but this way we do not need to call the API to check for the existing model.
 
+![Model Name Error](./assets/article-name-error.png)
+
 ## Development
 
 ### Customize The Elasticsearch Index Settings And Mappings For Your Deployment ([#2316](https://github.com/webiny/webiny-js/pull/2316))
