--- a/src/pages/docs/release-notes/5.26.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.26.0/changelog.mdx
@@ -51,5 +51,12 @@ On all old systems, if you want to change how the indexes are created, and chang
 
 We added the Japanese Elasticsearch Index configuration for all of our applications.
 
+## Page Builder
 
+### New IFrame Component ([#2319](https://github.com/webiny/webiny-js/pull/2319))
 
+A new element is available under the "Media" section of the page builder elements. Choose an iFrame source (which must be a valid URL) to render an iFrame. You can also set different properties at different breakpoints as you can in other elements.
+
+![Choose the IFrame component from the "Media" section of the page builder](https://user-images.githubusercontent.com/2216344/162738116-6c158783-c2dd-4cbc-be3d-56b9c57a5a45.png)
+
+![Choose an IFrame source - a valid URL - to render the iFrame](https://user-images.githubusercontent.com/2216344/162738130-ab69873c-cc7c-4d25-af12-f0667ccd0ff0.png)
