chore(changelog): add a section on @types/web

--- a/src/pages/docs/release-notes/5.26.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.26.0/changelog.mdx
@@ -55,6 +55,12 @@ In all new Webiny deployments where the Elasticsearch is used, it is the default
 
 On all old systems, if you want to change how the indexes are created, and change the existing ones, please read [How To Change Elasticsearch Index Name To Contain Locale](/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale).
 
-### Added Japanese Elasticsearch Index Configuration ([#2326](https://github.com/webiny/webiny-js/pull/2326))
+### Add Japanese Elasticsearch Index Configuration ([#2326](https://github.com/webiny/webiny-js/pull/2326))
 
 We added the Japanese Elasticsearch Index configuration for all of our applications.
+
+### Replace `@typescript/lib-dom` with `@types/web`([a6488b](https://github.com/webiny/webiny-js/commit/a6cf5c720a7b440a9c7bc262d4e8b5d771a6488b))
+
+[@types/web](https://www.npmjs.com/package/@types/web) is a package that contains DOM types for the majority of the web APIs used in a web browser. In your projects, it replaces `@typescript/lib-dom`, which you are more familiar with in form of `lib: ["dom"]` in your `tsconfig.json` files. When using `@types/web`, you no longer need to specify `lib: ["dom"]`.
+
+The main reason for this change is that more and more packages out there are using this new utility package for their types, and if it ends up in your `node_moduiles`, all of a sudden, all your TS builds will start failing because the two types packages are clashing. To avoid these nightmare scenarios (and we spent one whole day figuring this out), we are officially switching to `@types/web` by adding it as a dependency to our `@webiny/app` package. The upgrade to Webiny 5.26.0 will take care of removing the `lib: ["dom"]` for you.
