feat: examples for elasticsearch operations

--- a/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
+++ b/src/pages/docs/core-development-concepts/extending-and-customizing/how-to-change-elasticsearch-index-name-to-contain-locale.mdx
@@ -57,6 +57,13 @@ You need to set the `WEBINY_ELASTICSEARCH_INDEX_LOCALE` environment variable to 
 #### 3. Lock Your Original Index
 This will produce errors on the input side, so make sure your users know not to touch anything, but this is required for clone to work.
 
+```
+POST root-page-builder
+{
+  "index.blocks.read_only": true
+}
+```
+
 #### 4. Figure Out The Name For Your New Elasticsearch Index
 The article [How To Customize Elasticsearch Index](/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index) contains the information on how we create the index names.
 
@@ -83,6 +90,12 @@ Use what ever tool or script you have at your disposal.
 You __MUST__ repeat previous steps for of the indexes you have (except Headless CMS ones, of course) because the environment variable you add will affect all the applications.
 
 #### 8. Verify That Newly Created Elasticsearch Index Is Not Locked For Writing
+```
+POST root-en-gb-page-builder
+{
+  "index.blocks.read_only": false
+}
+```
 
 #### 9. Deploy The Code For Environment Variable To Have Effect
 ... or set the required environment variable if you have skipped step 2.
