--- a/src/pages/docs/get-started/install-webiny.mdx
+++ b/src/pages/docs/get-started/install-webiny.mdx
@@ -19,13 +19,12 @@ import { TabsComponent, TabsItem } from "@/components/TabsComponent"
 
 Before proceeding, make sure you have the following:
 
-1. **Node.js ^12 || ^14**
-    - Node.js versions **12** or **14**
+1. **Node.js >=14**
+    - Node.js versions **14** or greater
     - If you don't have Node.js installed, the easiest way to install it is by [downloading the official binary](https://nodejs.org/en/)
-2. **yarn ^1.22.0 || ^2**
-    - Webiny works with both yarn versions [1 (classic)](https://yarnpkg.com/en/docs/install) and [2 (berry)](https://yarnpkg.com/)
+2. **yarn ^1.22.0 || >=2**
+    - Webiny works with both yarn versions [1 (classic)](https://yarnpkg.com/en/docs/install) and [>=2 (berry)](https://yarnpkg.com/)
     - for version 1 - **1.22.0** or later is required
-    - for version 2 - **2.0.0** or later is required
 3. **AWS account and user credentials**
     - in order to deploy Webiny, you must have a valid [AWS account and user credentials](../infrastructure/aws/configure-aws-credentials) set up on your system
 
