fix: add the missing piece of MT CDN config

--- a/src/pages/docs/enterprise/multi-tenancy.mdx
+++ b/src/pages/docs/enterprise/multi-tenancy.mdx
@@ -219,6 +219,13 @@ class Delivery {
 +         }
 +       ]
       },
++     customErrorResponses: [
++       {
++         errorCode: 404,
++         responseCode: 404,
++         responsePagePath: "/_NOT_FOUND_PAGE_/index.html"
++       }
++     ],
       priceClass: "PriceClass_100",
       restrictions: {
         geoRestriction: {
