fix(write): update email address

--- a/src/pages/docs/write-with-webiny/write-with-webiny.mdx
+++ b/src/pages/docs/write-with-webiny/write-with-webiny.mdx
@@ -59,7 +59,7 @@ We're always interested in promoting and sharing content that is beneficial to o
     
 ### Q. I work for another developer company. Can I submit writing that mentions or promotes our product?
     
-A. We'd love to chat about new partnerships and co-marketing opportunities. Reach out to partners@webiny.com to discuss the partnership opportunities.
+A. We'd love to chat about new partnerships and co-marketing opportunities. Reach out to [write@webiny.com](mailto:write@webiny.com) to discuss the partnership opportunities.
     
 ### Q. Can I publish the article to my personal blog after it's published through the program?
     
