chore(write): correct typo

--- a/src/pages/docs/write-with-webiny/write-with-webiny.mdx
+++ b/src/pages/docs/write-with-webiny/write-with-webiny.mdx
@@ -53,7 +53,7 @@ FAQ
 
 ### Q. Can I submit work that has already been published? I've already written an article on one of your topics.
     
-A. At this time we are only paying for original content not published elsewhere. We will do due-diligence to ensure that all submitted content is original and does not violate any copyright.
+A. At this time we are only paying for original content not published elsewhere. We will do due diligence to ensure that all submitted content is original and does not violate any copyright.
     
 We're always interested in promoting and sharing content that is beneficial to our community and audience. So if you have an existing article that hasn't already been published, and that you think would be relevant, please contact us to discuss potential content syndication.
     
