docs: fixed the broken link for prod/index.ts file

--- a/src/pages/docs/infrastructure/basics/destroy-cloud-infrastructure.mdx
+++ b/src/pages/docs/infrastructure/basics/destroy-cloud-infrastructure.mdx
@@ -75,7 +75,7 @@ Within a Webiny project, note that the `pulumi up` and `pulumi destroy` commands
 
 </Alert>
 
-So, in order to destroy all cloud infrastructure resources deployed into the `prod` environment, for starters, unmark all cloud resources as protected, which can be done by setting the `protectedEnvironment` [(`api/pulumi/prod/index.ts`)](https://github.com/webiny/webiny-js/blob/617751651e1f95338391805a458cb79b17f81678/packages/cwp-template-aws/template/ddb/api/pulumi/prod/index.ts#L22) flag to `false`.
+So, in order to destroy all cloud infrastructure resources deployed into the `prod` environment, for starters, unmark all cloud resources as protected, which can be done by setting the `protectedEnvironment` [(`api/pulumi/prod/index.ts`)](https://github.com/webiny/webiny-js/blob/v5.27.0/packages/cwp-template-aws/template/ddb/api/pulumi/prod/index.ts#L22) flag to `false`.
 
 Once that's in place, run the [`webiny deploy`](../../core-development-concepts/basics/project-deployment) command to apply changes, and finally, run the [`webiny destroy`](../../infrastructure/basics/destroy-cloud-infrastructure) to destroy everything.
 
