fix(headlesscms): update npx nextjs create script

--- a/src/pages/docs/headless-cms/integrations/nextjs.mdx
+++ b/src/pages/docs/headless-cms/integrations/nextjs.mdx
@@ -80,7 +80,7 @@ Save the API token and the Token itself will be revealed. You can use the same A
 
 ## Set up a NextJS project
 
-You can [follow the "Getting Started" page on the NextJS site](https://nextjs.org/docs/getting-started), or run `yarn create next-app` to spin up a basic project. 
+You can [follow the "Getting Started" page on the NextJS site](https://nextjs.org/docs/getting-started), or run `npx create-next-app nextjs-blog-webiny --example "https://github.com/webiny/nextjs-starter-webiny/tree/master"` to spin up a basic project. 
 
 Once you've done one of these, add a new file `.env.local` to the project root. NextJS will look for environment variables in that location.
 
