docs: improved the How Write With Webiny program work section Thanks to Mislav for the copy.

--- a/src/pages/docs/write-with-webiny/write-with-webiny.mdx
+++ b/src/pages/docs/write-with-webiny/write-with-webiny.mdx
@@ -34,12 +34,51 @@ If there is a topic that you might find relevant for Webiny community, but doesn
 How does it work?
 -----------------
 
-*   [Join our dev community](https://www.webiny.com/slack/) to find the latest news and updates on the currently active writing tasks and opportunities
-*   Submit your proposal with a topic and an abstract using this [form](https://site.webiny.com/forms/write-with-webiny/)
-*   Once your proposal is accepted, our editors will get in touch and help you refine your title and outline. We will also decide on the mechanisms of the payout at this stage.
-*   Once have made an agreement, you can go ahead and start working on your article.
-*   When you have a first draft, you will submit it for initial review. Webiny editors will commit to getting back to you within 14 days with any feedback and you can work with them on polishing the article towards the final version that is ready for publication.
-*   Upon completion, the article will be scheduled to be published by Webiny and you will receive the agreed fee for your work.
+### Step 1. Join our Slack community
+
+All of the main communication between the writers and Webiny team is taking place in the dedicated [#write-for-webiny](https://www.webiny.com/slack/) channel on our [community Slack](https://www.webiny.com/slack/).
+
+Here you can find all the news and updated regarding the program, plus have an easy access to the Webiny team and other community writers in the program.
+
+
+### Step 2. Register your interest as a writer
+
+If you are joining the program for the first time, please [register as a new writer](https://site.webiny.com/forms/write-with-webiny/) before submitting or picking out any content.
+
+We'll set you up as a new writer, provide all the necessary information that you need to start writing, and answer any questions you may have.
+
+
+### Step 3. Pick or propose a topic you want to cover
+
+There are two main ways you can submit your interest for writing an article:
+
+1. **Pick an existing topic that has been requested by our community.**
+You can simply browse through the topics that are labeled with "Looking for a writer" label. Find a topic you would like to cover, add a comment to it including a brief abstract a detailed outline.
+
+2. **Suggest your own topic that you believe might be valuable to our dev community.**
+Create a new issue using the provided template and submit an outline of the topic you would like to request to be covered.
+
+
+### Step 4. Topic request review and approval
+
+Once your proposal has been submitted, our team will review the information you provided. Then approve and assign you the article, or come back to you with relevant feedback.
+
+At this stage, we will also agree on the fee, expected timelines and other details of this cooperation.
+
+
+### Step 5. Review submission
+
+You should review the submission guidelines, FAQs and examples of previously published articles before you start working on drafting your article. If you still have any outstanding questions, please reach out to our team through the Slack channel to get further clarity.
+
+
+### Step 6. Submit your article
+
+Once you have a first draft of your article written, you can submit it to our editorial team for review. If any revisions are needed, our team will provide you the feedback and work with you on getting the draft polished to the versions that is ready for publishing.
+
+
+### Step 7. Get paid for your work
+
+Once you get the confirmation from the editorial team that your article is finalised and ready to be published, you can submit your invoice and get paid for your work. Please follow the instructions provided to you at the approval stage (step 4).
 
 Who can apply?
 --------------
