--- a/src/pages/docs/write-with-webiny/write-with-webiny.mdx
+++ b/src/pages/docs/write-with-webiny/write-with-webiny.mdx
@@ -52,10 +52,10 @@ We'll set you up as a new writer, provide all the necessary information that you
 
 There are two main ways you can submit your interest for writing an article:
 
-1. **Pick an existing topic that has been requested by our community.**
+1. [**Pick an existing topic that has been requested by our community.**](https://github.com/webiny/write-with-webiny/issues?q=is%3Aissue+is%3Aopen+label%3A%22Looking+for+a+writer%22)
 You can simply browse through the topics that are labeled with "Looking for a writer" label. Find a topic you would like to cover, add a comment to it including a brief abstract a detailed outline.
 
-2. **Suggest your own topic that you believe might be valuable to our dev community.**
+2. [**Suggest your own topic that you believe might be valuable to our dev community.**](https://github.com/webiny/write-with-webiny/issues/new?assignees=&labels=&template=1-submit-article-proposal.yml&title=%5BSUBMIT%5D)
 Create a new issue using the provided template and submit an outline of the topic you would like to request to be covered.
 
 
@@ -68,7 +68,7 @@ At this stage, we will also agree on the fee, expected timelines and other detai
 
 ### Step 5. Review submission
 
-You should review the submission guidelines, FAQs and examples of previously published articles before you start working on drafting your article. If you still have any outstanding questions, please reach out to our team through the Slack channel to get further clarity.
+You should review the submission guidelines, [FAQs](https://github.com/webiny/write-with-webiny/blob/main/FAQ.md) and examples of previously published articles before you start working on drafting your article. If you still have any outstanding questions, please reach out to our team through the Slack channel to get further clarity.
 
 
 ### Step 6. Submit your article
