fix: fix typos and code sample issues

--- a/src/pages/docs/page-builder/references/lifecycle-events.mdx
+++ b/src/pages/docs/page-builder/references/lifecycle-events.mdx
@@ -952,15 +952,9 @@ new ContextPlugin<PbContext>(async (context) => {
 })
 ```
 
-<Alert type="danger">
-
-Please, be aware that you can change what ever you want on the object before it is stored into the database, so be careful with changing the data.
-
-</Alert>
-
 ## Block Categories
 
-### OnBeforeBlockCategoryCreateTopicParams
+### onBeforeBlockCategoryCreate
 
 This event is triggered before new block category is stored into the database.
 
@@ -987,7 +981,7 @@ new ContextPlugin<PbContext>(async (context) => {
 })
 ```
 
-### OnAfterBlockCategoryCreateTopicParams
+### onAfterBlockCategoryCreate
 
 This event is triggered after new block category is stored into the database.
 
@@ -1007,7 +1001,7 @@ new ContextPlugin<PbContext>(async (context) => {
 })
 ```
 
-### OnBeforeBlockCategoryUpdateTopicParams
+### onBeforeBlockCategoryUpdate
 
 This event is triggered before existing block category is updated and stored.
 
@@ -1034,7 +1028,7 @@ new ContextPlugin<PbContext>(async (context) => {
 })
 ```
 
-### OnAfterBlockCategoryUpdateTopicParams
+### onAfterBlockCategoryUpdate
 
 This event is triggered after existing block category is updated and stored.
 
@@ -1055,7 +1049,7 @@ new ContextPlugin<PbContext>(async (context) => {
 })
 ```
 
-### OnBeforeBlockCategoryDeleteTopicParams
+### onBeforeBlockCategoryDelete
 
 This event is triggered before block category is deleted from the database.
 
@@ -1069,7 +1063,7 @@ This event is triggered before block category is deleted from the database.
 
 ```typescript
 new ContextPlugin<PbContext>(async (context) => {
-  context.pageBuilder.onBeforeBlockCategoryDelete.subscribe(async ({ original, blockCategory }) => {
+  context.pageBuilder.onBeforeBlockCategoryDelete.subscribe(async ({ blockCategory }) => {
     /**
      * For example, we do not want to allow certain category with a name "All Advertisement Blocks" to be deleted.
      */
@@ -1081,7 +1075,7 @@ new ContextPlugin<PbContext>(async (context) => {
 })
 ```
 
-### OnAfterBlockCategoryDeleteTopicParams
+### onAfterBlockCategoryDelete
 
 This event is triggered after block category is deleted from the database.
 
@@ -1095,13 +1089,19 @@ This event is triggered after block category is deleted from the database.
 
 ```typescript
 new ContextPlugin<PbContext>(async (context) => {
-  context.pageBuilder.onAfterBlockCategoryDelete.subscribe(async ({ original, blockCategory }) => {
-    await deleteBlockCategoryFromAnotherSystem({ original, blockCategory })
+  context.pageBuilder.onAfterBlockCategoryDelete.subscribe(async ({ blockCategory }) => {
+    await deleteBlockCategoryFromAnotherSystem({ blockCategory })
   })
 })
 ```
 
 ## Registering Lifecycle Event Subscriptions
+
+<Alert type="danger">
+
+Please, be aware that you can change what ever you want on the object before it is stored into the database, so be careful with changing the data.
+
+</Alert>
 
 For the subscriptions (your code) to be run, you must register it in the `createHandler` in the `api/code/graphql/src/index.ts` file.
 
